[Tab Highlighting] context menu - move to another window
Adds the "move tabs to new window" or "move tabs to another window"
option for multi-selected tabs context menu.

Bug: 404074503
Change-Id: I5bcf799b899d146bc25aadc7c96509f15229dbdf
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6769433
Reviewed-by: Zhe Li <zheliooo@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Auto-Submit: Hitarth Kothari <hitarthkothari@google.com>
Commit-Queue: Hitarth Kothari <hitarthkothari@google.com>
Cr-Commit-Position: refs/heads/main@{#1489714}