@@ -52,6 +52,7 @@ import org.chromium.ui.modelutil.MVCListAdapter.ModelList;
 import org.chromium.url.GURL;
 
 import java.lang.ref.WeakReference;
+import java.util.Collections;
 import java.util.List;
 
 /** Unit tests for {@link MultiSelectedTabsContextMenuCoordinator}. */
@@ -62,7 +63,7 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
     private static final int TAB_2_ID = 2;
     private static final int TAB_OUTSIDE_OF_GROUP_ID_1 = 3;
     private static final int TAB_OUTSIDE_OF_GROUP_ID_2 = 4;
-    private static final int NON_URL_TAB_ID = 4;
+    private static final int NON_URL_TAB_ID = 5;
     private static final Token TAB_GROUP_ID = Token.createRandom();
     private static final String COLLABORATION_ID = "CollaborationId";
     private static final GURL EXAMPLE_URL = new GURL("https://example.com");
@@ -256,7 +257,7 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         var modelList = new ModelList();
         mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
                 modelList, List.of(TAB_1_ID, TAB_2_ID));
-        assertEquals("Number of items in the list menu is incorrect", 2, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 3, modelList.size());
 
         // List item 1
         assertMenuItemTitle(
@@ -268,6 +269,13 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         // List item 2
         assertMenuItemTitleId(
                 modelList, 1, R.string.remove_tabs_from_group, R.id.remove_from_tab_group);
+
+        // List item 3
+        assertMenuItemTitle(
+                modelList,
+                2,
+                getQuantityString(R.plurals.move_tabs_to_another_window, 1),
+                R.id.move_to_other_window_menu_id);
     }
 
     @Test
@@ -275,7 +283,7 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         var modelList = new ModelList();
         mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
                 modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID_1, TAB_OUTSIDE_OF_GROUP_ID_2));
-        assertEquals("Number of items in the list menu is incorrect", 1, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 2, modelList.size());
 
         // List item 1
         assertMenuItemTitle(
@@ -283,6 +291,13 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
                 0,
                 getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
                 R.id.add_to_tab_group);
+
+        // List item 2
+        assertMenuItemTitle(
+                modelList,
+                1,
+                getQuantityString(R.plurals.move_tabs_to_another_window, 1),
+                R.id.move_to_other_window_menu_id);
     }
 
     @Test
@@ -290,7 +305,7 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         var modelList = new ModelList();
         mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
                 modelList, List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1));
-        assertEquals("Number of items in the list menu is incorrect", 2, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 3, modelList.size());
 
         // List item 1
         assertMenuItemTitle(
@@ -302,6 +317,13 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         // List item 2
         assertMenuItemTitleId(
                 modelList, 1, R.string.remove_tabs_from_group, R.id.remove_from_tab_group);
+
+        // List item 3
+        assertMenuItemTitle(
+                modelList,
+                2,
+                getQuantityString(R.plurals.move_tabs_to_another_window, 1),
+                R.id.move_to_other_window_menu_id);
     }
 
     @Test
@@ -312,7 +334,7 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
         mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
                 modelList, List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1));
 
-        assertEquals("Number of items in the list menu is incorrect", 2, modelList.size());
+        assertEquals("Number of items in the list menu is incorrect", 3, modelList.size());
 
         // List item 1
         assertMenuItemTitle(
@@ -321,10 +343,69 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
                 getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
                 R.id.add_to_tab_group);
         assertStringStyleForIncognito(modelList, 0);
+
         // List item 2
         assertMenuItemTitleId(
                 modelList, 1, R.string.remove_tabs_from_group, R.id.remove_from_tab_group);
         assertStringStyleForIncognito(modelList, 1);
+
+        // List item 3
+        assertMenuItemTitle(
+                modelList,
+                2,
+                getQuantityString(R.plurals.move_tabs_to_another_window, 1),
+                R.id.move_to_other_window_menu_id);
+        assertStringStyleForIncognito(modelList, 2);
+    }
+
+    @Test
+    public void testListMenuItems_belowApi31() {
+        MultiWindowUtils.setMultiInstanceApi31EnabledForTesting(false);
+        var modelList = new ModelList();
+        mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
+                modelList, List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1));
+
+        assertEquals("Number of items in the list menu is incorrect", 2, modelList.size());
+
+        // List item 1
+        assertMenuItemTitle(
+                modelList,
+                0,
+                getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
+                R.id.add_to_tab_group);
+
+        // List item 2
+        assertMenuItemTitleId(
+                modelList, 1, R.string.remove_tabs_from_group, R.id.remove_from_tab_group);
+    }
+
+    @Test
+    public void testListMenuItems_tabOutsideOfGroup_multipleWindows() {
+        MultiWindowUtils.setInstanceCountForTesting(2);
+
+        var modelList = new ModelList();
+        mMultiSelectedTabsContextMenuCoordinator.buildMenuActionItems(
+                modelList, List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1));
+
+        assertEquals("Number of items in the list menu is incorrect", 3, modelList.size());
+
+        // List item 1
+        assertMenuItemTitle(
+                modelList,
+                0,
+                getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
+                R.id.add_to_tab_group);
+
+        // List item 2
+        assertMenuItemTitleId(
+                modelList, 1, R.string.remove_tabs_from_group, R.id.remove_from_tab_group);
+
+        // List item 3
+        assertMenuItemTitle(
+                modelList,
+                2,
+                getQuantityString(R.plurals.move_tabs_to_another_window, 2),
+                R.id.move_to_other_window_menu_id);
     }
 
     @Test
@@ -340,12 +421,80 @@ public class MultiSelectedTabsContextMenuCoordinatorUnitTest {
     public void testRemoveTabsFromGroup() {
         List<Integer> tabIds = List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1);
         // Internally, tabs not part of a group are filtered out.
-        List<Tab> groupedTabs = List.of(mTab1);
+        List<Tab> groupedTabs = Collections.singletonList(mTab1);
         mOnItemClickedCallback.onClick(
                 R.id.remove_from_tab_group,
                 tabIds,
                 COLLABORATION_ID,
                 /* listViewTouchTracker= */ null);
         verify(mTabUngrouper, times(1)).ungroupTabs(groupedTabs, true, true);
+    }
+
+    @Test
+    public void testMoveMultipleTabsToAnotherWindow() {
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        List<Tab> tabsToMove = List.of(mTabOutsideOfGroup1, mTabOutsideOfGroup2);
+
+        mOnItemClickedCallback.onClick(
+                R.id.move_to_other_window_menu_id,
+                List.of(TAB_OUTSIDE_OF_GROUP_ID_1, TAB_OUTSIDE_OF_GROUP_ID_2),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabUngrouper, times(0))
+                .ungroupTabs(
+                        (List<Tab>) org.mockito.ArgumentMatchers.any(),
+                        org.mockito.ArgumentMatchers.anyBoolean(),
+                        org.mockito.ArgumentMatchers.anyBoolean());
+        verify(mMultiInstanceManager, times(1)).moveTabsToOtherWindow(tabsToMove);
+    }
+
+    @Test
+    public void testMoveMultipleTabsToAnotherWindow_oneTabInGroup() {
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        List<Tab> tabsToMove = List.of(mTab1, mTabOutsideOfGroup1);
+
+        mOnItemClickedCallback.onClick(
+                R.id.move_to_other_window_menu_id,
+                List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabUngrouper, times(1)).ungroupTabs(Collections.singletonList(mTab1), true, false);
+        verify(mMultiInstanceManager, times(1)).moveTabsToOtherWindow(tabsToMove);
+    }
+
+    @Test
+    public void testMoveMultipleTabsToAnotherWindow_multipleWindows() {
+        MultiWindowUtils.setInstanceCountForTesting(2);
+        List<Tab> tabsToMove = List.of(mTabOutsideOfGroup1, mTabOutsideOfGroup2);
+
+        mOnItemClickedCallback.onClick(
+                R.id.move_to_other_window_menu_id,
+                List.of(TAB_OUTSIDE_OF_GROUP_ID_1, TAB_OUTSIDE_OF_GROUP_ID_2),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabUngrouper, times(0))
+                .ungroupTabs(
+                        (List<Tab>) org.mockito.ArgumentMatchers.any(),
+                        org.mockito.ArgumentMatchers.anyBoolean(),
+                        org.mockito.ArgumentMatchers.anyBoolean());
+        verify(mMultiInstanceManager, times(1)).moveTabsToOtherWindow(tabsToMove);
+    }
+
+    @Test
+    public void testMoveMultipleTabsToAnotherWindow_multipleWindows_oneTabInGroup() {
+        MultiWindowUtils.setInstanceCountForTesting(2);
+        List<Tab> tabsToMove = List.of(mTab1, mTabOutsideOfGroup1);
+
+        mOnItemClickedCallback.onClick(
+                R.id.move_to_other_window_menu_id,
+                List.of(TAB_1_ID, TAB_OUTSIDE_OF_GROUP_ID_1),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
+
+        verify(mTabUngrouper, times(1)).ungroupTabs(Collections.singletonList(mTab1), true, false);
+        verify(mMultiInstanceManager, times(1)).moveTabsToOtherWindow(tabsToMove);
     }
 }
